Tue Sep 23 21:55:28 UTC 2008  Phil Mesnier  <mesnier_p@ociweb.com>

        * bin/tao_other_tests.lst:

          Bug 3431 was fixed, so I'm making this test part of the nightly
          build.
        
Tue Sep 23 19:32:38  2008  Steve Huston  <shuston@riverace.com>

        Brought in from ACE 5.6a:
        Tue Aug 26 17:11:10 UTC 2008  Steve Huston  <shuston@riverace.com>

        * tests/Service_Config_Test.cpp: Add a test for looking up services
          from a thread started outside ACE's control. This has code for
          Pthreads and Windows; other platforms will require additions if
          desired.

Tue Sep 23 16:49:12 UTC 2008  Steve Huston  <shuston@riverace.com>

        * tests/Bug_2980_Regression_Test.cpp: Adjust to shared lib suffix
          that differs from ".so". Fixes HP-UX 11iv2 on PA-RISC. Generalizes
          (and reverts) the platform tests made in
          Mon Sep 22 13:17:19 UTC 2008  Simon McQueen  <sm@prismtech.com>

Tue Sep 23 15:41:43  2008  Steve Huston  <shuston@riverace.com>

        * tests/run_test.pl: Don't delete Service_Config_Test.conf from the
          target; on local builds, it deletes it from the working dir and
          svn needs to restore it. Fixes Bugzilla #3409. Thanks to Johnny
          Willemsen for noticing this.

        * ace/os_include/sys/os_types.h:
        * ace/OS_NS_sys_stat.inl (umask): Changed mode_t from an int back to
          u_short. int conflicts with other packages' defs of mode_t (in
          particular, Perl). Of all the places mode_t is used, the only place
          int made a real difference was in calling _umask_s() on Windows
          VC8+. This change reverts the affected piece of
          Fri Mar  9 00:53:43 UTC 2007  Steve Huston  <shuston@riverace.com>

Tue Sep 23 15:32:57 UTC 2008  Phil Mesnier  <mesnier_p@ociweb.com>

        * bin/tao_other_tests.lst:

          Added new test for bug #3431. This test will definitely fail